--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body, html{
-	background-color: white;
+	background-color: rgb(240, 214, 182);
 	color: #575757;
 	width: 100%;
 	height: 100%;
@@ -229,11 +229,11 @@ ul {
 	color: #ac78c2;
 }
 .second-color {
-	color: #c5c8c6;
+	color: #b7d7c2;
 }
 
 .third-color {
-	color: #5888ca;
+	color: #6c92c7;
 }
 
 .fourth-color {
@@ -241,7 +241,7 @@ ul {
 }
 
 .fifth-color {
-	color: #b5bd68;
+	color: #da84ae;
 }
 
 /**Education**/
